librocksdb-sys/src/lib.rs

// Copyright 2014 Tyler Neely, 2016 Alex Regueiro
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

//! Raw bindings for RocksDB.
//!
//! This is simply a raw interface to the RocksDB C API. It is intended to underpin a higher-level library rather than for direct use.

#![allow(dead_code, non_camel_case_types, non_upper_case_globals, non_snake_case)]

extern crate libc;

#[cfg(test)]
mod test;

use libc::*;

extern "C" {
    // Database operations

    pub fn rocksdb_open(options: *const rocksdb_options_t,
                        name: *const c_char,
                        errptr: *mut *mut c_char)
                        -> *mut rocksdb_t;

    pub fn rocksdb_open_for_read_only(options: *const rocksdb_options_t,
                                      name: *const c_char,
                                      error_if_log_file_exist: c_uchar,
                                      errptr: *mut *mut c_char)
                                      -> *mut rocksdb_t;

    pub fn rocksdb_backup_engine_open(options: *const rocksdb_options_t,
                                      path: *const c_char,
                                      errptr: *mut *mut c_char)
                                      -> *mut rocksdb_backup_engine_t;

    pub fn rocksdb_backup_engine_create_new_backup(be: *mut rocksdb_backup_engine_t,
                                                   db: *mut rocksdb_t,
                                                   errptr: *mut *mut c_char);

    pub fn rocksdb_backup_engine_purge_old_backups(be: *mut rocksdb_backup_engine_t,
                                                   num_backups_to_keep: uint32_t,
                                                   errptr: *mut *mut c_char);

    pub fn rocksdb_restore_options_create() -> *mut rocksdb_restore_options_t;

    pub fn rocksdb_restore_options_destroy(opt: *mut rocksdb_restore_options_t);

    pub fn rocksdb_restore_options_set_keep_log_files(opt: *mut rocksdb_restore_options_t,
                                                      v: c_int);

    pub fn rocksdb_backup_engine_restore_db_from_latest_backup(be: *mut rocksdb_backup_engine_t, db_dir: *const c_char, wal_dir: *const c_char, restore_options: *const rocksdb_restore_options_t, errptr: *mut *mut c_char);

    pub fn rocksdb_backup_engine_get_backup_info(be: *mut rocksdb_backup_engine_t)
                                                 -> *const rocksdb_backup_engine_info_t;

    pub fn rocksdb_backup_engine_info_count(info: *const rocksdb_backup_engine_info_t) -> c_int;

    pub fn rocksdb_backup_engine_info_timestamp(info: *const rocksdb_backup_engine_info_t,
                                                index: c_int)
                                                -> int64_t;

    pub fn rocksdb_backup_engine_info_backup_id(info: *const rocksdb_backup_engine_info_t,
                                                index: c_int)
                                                -> uint32_t;

    pub fn rocksdb_backup_engine_info_size(info: *const rocksdb_backup_engine_info_t,
                                           index: c_int)
                                           -> uint64_t;

    pub fn rocksdb_backup_engine_info_number_files(info: *const rocksdb_backup_engine_info_t,
                                                   index: c_int)
                                                   -> uint32_t;

    pub fn rocksdb_backup_engine_info_destroy(info: *const rocksdb_backup_engine_info_t);

    pub fn rocksdb_backup_engine_close(be: *mut rocksdb_backup_engine_t);

    pub fn rocksdb_open_column_families(options: *const rocksdb_options_t, name: *const c_char, num_column_families: c_int, column_family_names: *const *const c_char, column_family_options: *const *const rocksdb_options_t, column_family_handles: *mut *mut rocksdb_column_family_handle_t, errptr: *mut *mut c_char) -> *mut rocksdb_t;

    pub fn rocksdb_open_for_read_only_column_families(options: *const rocksdb_options_t, name: *const c_char, num_column_families: c_int, column_family_names: *const *const c_char, column_family_options: *const *const rocksdb_options_t, column_family_handles: *mut *mut rocksdb_column_family_handle_t, error_if_log_file_exist: c_uchar, errptr: *mut *mut c_char) -> *mut rocksdb_t;

    pub fn rocksdb_list_column_families(options: *const rocksdb_options_t,
                                        name: *const c_char,
                                        lencf: *mut size_t,
                                        errptr: *mut *mut c_char)
                                        -> *mut *mut c_char;

    pub fn rocksdb_list_column_families_destroy(list: *mut *mut c_char, len: size_t);

    pub fn rocksdb_create_column_family(db: *mut rocksdb_t,
                                        column_family_options: *const rocksdb_options_t,
                                        column_family_name: *const c_char,
                                        errptr: *mut *mut c_char)
                                        -> *mut rocksdb_column_family_handle_t;

    pub fn rocksdb_drop_column_family(db: *mut rocksdb_t,
                                      handle: *mut rocksdb_column_family_handle_t,
                                      errptr: *mut *mut c_char);

    pub fn rocksdb_column_family_handle_destroy(handle: *mut rocksdb_column_family_handle_t);

    pub fn rocksdb_close(db: *mut rocksdb_t);

    pub fn rocksdb_put(db: *mut rocksdb_t,
                       options: *const rocksdb_writeoptions_t,
                       key: *const c_char,
                       keylen: size_t,
                       val: *const c_char,
                       vallen: size_t,
                       errptr: *mut *mut c_char);

    pub fn rocksdb_put_cf(db: *mut rocksdb_t,
                          options: *const rocksdb_writeoptions_t,
                          column_family: *mut rocksdb_column_family_handle_t,
                          key: *const c_char,
                          keylen: size_t,
                          val: *const c_char,
                          vallen: size_t,
                          errptr: *mut *mut c_char);

    pub fn rocksdb_delete(db: *mut rocksdb_t,
                          options: *const rocksdb_writeoptions_t,
                          key: *const c_char,
                          keylen: size_t,
                          errptr: *mut *mut c_char);

    pub fn rocksdb_delete_cf(db: *mut rocksdb_t,
                             options: *const rocksdb_writeoptions_t,
                             column_family: *mut rocksdb_column_family_handle_t,
                             key: *const c_char,
                             keylen: size_t,
                             errptr: *mut *mut c_char);

    pub fn rocksdb_merge(db: *mut rocksdb_t,
                         options: *const rocksdb_writeoptions_t,
                         key: *const c_char,
                         keylen: size_t,
                         val: *const c_char,
                         vallen: size_t,
                         errptr: *mut *mut c_char);

    pub fn rocksdb_merge_cf(db: *mut rocksdb_t,
                            options: *const rocksdb_writeoptions_t,
                            column_family: *mut rocksdb_column_family_handle_t,
                            key: *const c_char,
                            keylen: size_t,
                            val: *const c_char,
                            vallen: size_t,
                            errptr: *mut *mut c_char);

    pub fn rocksdb_write(db: *mut rocksdb_t,
                         options: *const rocksdb_writeoptions_t,
                         batch: *mut rocksdb_writebatch_t,
                         errptr: *mut *mut c_char);

    pub fn rocksdb_get(db: *mut rocksdb_t,
                       options: *const rocksdb_readoptions_t,
                       key: *const c_char,
                       keylen: size_t,
                       vallen: *mut size_t,
                       errptr: *mut *mut c_char)
                       -> *mut c_char;

    pub fn rocksdb_get_cf(db: *mut rocksdb_t,
                          options: *const rocksdb_readoptions_t,
                          column_family: *mut rocksdb_column_family_handle_t,
                          key: *const c_char,
                          keylen: size_t,
                          vallen: *mut size_t,
                          errptr: *mut *mut c_char)
                          -> *mut c_char;

    pub fn rocksdb_multi_get(db: *mut rocksdb_t,
                             options: *const rocksdb_readoptions_t,
                             num_keys: size_t,
                             keys_list: *const *const c_char,
                             keys_list_sizes: *const size_t,
                             values_list: *mut *mut c_char,
                             values_list_sizes: *mut size_t,
                             errs: *mut *mut c_char);

    pub fn rocksdb_multi_get_cf(db: *mut rocksdb_t,
                                options: *const rocksdb_readoptions_t,
                                column_families: *const *const rocksdb_column_family_handle_t,
                                num_keys: size_t,
                                keys_list: *const *const c_char,
                                keys_list_sizes: *const size_t,
                                values_list: *mut *mut c_char,
                                values_list_sizes: *mut size_t,
                                errs: *mut *mut c_char);

    pub fn rocksdb_create_iterator(db: *mut rocksdb_t,
                                   options: *const rocksdb_readoptions_t)
                                   -> *mut rocksdb_iterator_t;

    pub fn rocksdb_create_iterator_cf(db: *mut rocksdb_t,
                                      options: *const rocksdb_readoptions_t,
                                      column_family: *mut rocksdb_column_family_handle_t)
                                      -> *mut rocksdb_iterator_t;

    pub fn rocksdb_create_iterators(db: *mut rocksdb_t,
                                    opts: *mut rocksdb_readoptions_t,
                                    column_families: *mut *mut rocksdb_column_family_handle_t,
                                    iterators: *mut *mut rocksdb_iterator_t,
                                    size: size_t,
                                    errptr: *mut *mut c_char);

    pub fn rocksdb_create_snapshot(db: *mut rocksdb_t) -> *const rocksdb_snapshot_t;

    pub fn rocksdb_release_snapshot(db: *mut rocksdb_t, snapshot: *const rocksdb_snapshot_t);

    pub fn rocksdb_property_value(db: *mut rocksdb_t, propname: *const c_char) -> *mut c_char;

    pub fn rocksdb_property_value_cf(db: *mut rocksdb_t,
                                     column_family: *mut rocksdb_column_family_handle_t,
                                     propname: *const c_char)
                                     -> *mut c_char;

    pub fn rocksdb_approximate_sizes(db: *mut rocksdb_t,
                                     num_ranges: c_int,
                                     range_start_key: *const *const c_char,
                                     range_start_key_len: *const size_t,
                                     range_limit_key: *const *const c_char,
                                     range_limit_key_len: *const size_t,
                                     sizes: *mut uint64_t);
